# vetcom

./: .replit  main.py  pyproject.toml  replit.nix
static/: app.js  promo.js  slide.js  style.css
templates/: 404.html  Admin_accessoire.html  accessoire.html  accessoireadmin.html  adm.html  administration.html  administrationadmin.html  article.html  articles.html  assistance.html  base.html  base1.html  client.html  commande.html  cookies.html  enfant.html  enfantadmin.html  error.html  femme.html  femmeadmin.html  homme.html  hommeadmin.html  index.html  login.html  menu.html  message.html  messagerie.html  nepasperdre.html  panier.html  payment.html  register.html  settings.html  test.html  update.html  update_commande.html  updatefemme.html  validation.html
