[tool.poetry]
name = "repl-nix-vetcom-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_vetcom_1"}]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.6.3"
flask = "^3.0.2"
bcrypt = "4.1.3"
python-dotenv = "^1.0.1"
bson = "^0.5.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
